--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^19.0.0",
     "react-error-boundary": "^5.0.0",
     "react-helmet-async": "^2.0.5",
+    "react-kakao-maps-sdk": "^1.1.27",
     "react-router": "^7.3.0"
   },
   "devDependencies": {
