--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,9 @@
   "$schema": "https://json.schemastore.org/tsconfig",
   "compilerOptions": {
     "target": "ES2017",
+    "types": [
+      "kakao.maps.d.ts",
+    ],
     "lib": [
       "dom",
       "dom.iterable",
