--- a/package.json
+++ b/package.json
@@ -1,43 +1,57 @@
 {
   "name": "jobko-food-map-fe",
-  "private": true,
   "version": "0.0.0",
+  "private": true,
+  "sideEffects": false,
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "build": "react-router build",
+    "dev": "react-router dev",
+    "generate-router-types": "react-router typegen",
+    "lint": "eslint . --fix",
+    "prettier": "prettier --write .",
+    "start": "react-router-serve ./build/server/index.js",
+    "typecheck": "pnpm run generate-router-types && tsc -b tsconfig.json"
   },
   "dependencies": {
-    "@tanstack/react-query": "^5.67.2",
+    "@react-router/fs-routes": "^7.3.0",
+    "@react-router/node": "^7.3.0",
+    "@react-router/serve": "^7.3.0",
+    "@tanstack/react-query": "^5.67.3",
     "@tanstack/react-query-devtools": "^5.67.2",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-error-boundary": "^5.0.0",
-    "react-helmet-async": "^2.0.5",
+    "isbot": "^5",
+    "react": "^19",
+    "react-dom": "^19",
     "react-kakao-maps-sdk": "^1.1.27",
     "react-router": "^7.3.0"
   },
   "devDependencies": {
-    "kakao.maps.d.ts": "^0.1.40",
     "@eslint/js": "^9.21.0",
     "@ianvs/prettier-plugin-sort-imports": "^4.4.1",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
+    "@react-router/dev": "^7.3.0",
+    "@types/node": "^22",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "@vanilla-extract/vite-plugin": "^5.0.1",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.21.0",
     "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "eslint-plugin-sort-destructure-keys": "^2.0.0",
     "eslint-plugin-unused-imports": "^4.1.4",
-    "globals": "^15.15.0",
+    "globals": "^16.0.0",
+    "kakao.maps.d.ts": "^0.1.40",
     "prettier": "^3.5.3",
     "prettier-plugin-packagejson": "^2.5.10",
-    "typescript": "~5.7.2",
+    "typescript": "^5",
     "typescript-eslint": "^8.24.1",
     "vite": "^6.2.0",
     "vite-tsconfig-paths": "^5.1.4"
+  },
+  "packageManager": "pnpm@10.6.2",
+  "engines": {
+    "node": ">=22"
   }
 }
