--- a/package.json
+++ b/package.json
@@ -17,13 +17,15 @@
     "@react-router/fs-routes": "^7.3.0",
     "@react-router/node": "^7.3.0",
     "@react-router/serve": "^7.3.0",
+    "@tailwindcss/vite": "^4.0.13",
     "@tanstack/react-query": "^5.67.3",
     "@tanstack/react-query-devtools": "^5.67.2",
     "isbot": "^5",
     "react": "^19",
     "react-dom": "^19",
     "react-kakao-maps-sdk": "^1.1.27",
-    "react-router": "^7.3.0"
+    "react-router": "^7.3.0",
+    "tailwindcss": "^4.0.13"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
@@ -32,7 +34,6 @@
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@vanilla-extract/vite-plugin": "^5.0.1",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.21.0",
     "eslint-config-prettier": "^10.1.1",
