--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "sideEffects": false,
   "type": "module",
   "scripts": {
-    "build": "tsc -b && vite build",
+    "build": "react-router build",
     "dev": "react-router dev",
     "generate-router-types": "react-router typegen",
     "lint": "eslint . --fix",
