--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "@tailwindcss/vite": "^4.0.13",
     "@tanstack/react-query": "^5.67.3",
     "@tanstack/react-query-devtools": "^5.67.2",
+    "axios": "^1.8.3",
     "isbot": "^5",
     "react": "^19",
     "react-dom": "^19",
     "react-kakao-maps-sdk": "^1.1.27",
     "react-router": "^7.3.0",
-    "tailwindcss": "^4.0.13"
+    "tailwindcss": "^4.0.13",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
@@ -51,7 +53,7 @@
     "vite": "^6.2.0",
     "vite-tsconfig-paths": "^5.1.4"
   },
-  "packageManager": "pnpm@10.6.2",
+  "packageManager": "pnpm@10.6.3",
   "engines": {
     "node": ">=22"
   }
