modify: 폴더구조 사알짝 변경

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "sideEffects": false,
   "type": "module",
   "scripts": {
-    "build": "react-router build",
+    "build": "react-router build --mode local",
+    "build-prd": "react-router build --mode prd",
     "dev": "react-router dev",
     "generate-router-types": "react-router typegen",
     "lint": "eslint . --fix",
