--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-kakao-maps-sdk": "^1.1.27",
     "react-router": "^7.3.0",
     "tailwindcss": "^4.0.13",
-    "zod": "^3.24.2"
+    "zod": "^3.24.2",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
