--- a/package.json
+++ b/package.json
@@ -9,51 +9,41 @@
     "build-prd": "react-router build --mode prd",
     "dev": "react-router dev",
     "generate-router-types": "react-router typegen",
-    "lint": "eslint . --fix",
-    "prettier": "prettier --write .",
+    "lint": "biome lint --write .",
+    "format": "biome format --write .",
+    "check": "biome check --write .",
     "start": "vite preview",
     "typecheck": "pnpm run generate-router-types && tsc -b tsconfig.json"
   },
   "dependencies": {
     "@react-oauth/google": "^0.12.1",
-    "@react-router/fs-routes": "^7.3.0",
-    "@react-router/node": "^7.3.0",
-    "@react-router/serve": "^7.3.0",
-    "@tailwindcss/vite": "^4.0.13",
-    "@tanstack/react-query": "^5.67.3",
-    "@tanstack/react-query-devtools": "^5.67.2",
-    "axios": "^1.8.3",
-    "isbot": "^5",
-    "react": "^19",
-    "react-dom": "^19",
+    "@react-router/fs-routes": "^7.5.0",
+    "@react-router/node": "^7.5.0",
+    "@react-router/serve": "^7.5.0",
+    "@tailwindcss/vite": "^4.1.4",
+    "@tanstack/react-query": "^5.74.3",
+    "@tanstack/react-query-devtools": "^5.74.3",
+    "axios": "^1.8.4",
+    "isbot": "^5.1.26",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-kakao-maps-sdk": "^1.1.27",
-    "react-router": "^7.3.0",
-    "tailwindcss": "^4.0.13",
-    "zod": "^3.24.2",
+    "react-router": "^7.5.0",
+    "tailwindcss": "^4.1.4",
+    "zod": "^3.24.3",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
-    "@eslint/js": "^9.21.0",
-    "@ianvs/prettier-plugin-sort-imports": "^4.4.1",
-    "@react-router/dev": "^7.3.0",
-    "@types/node": "^22",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@vitejs/plugin-react": "^4.3.4",
-    "eslint": "^9.21.0",
-    "eslint-config-prettier": "^10.1.1",
-    "eslint-plugin-react": "^7.37.4",
-    "eslint-plugin-react-hooks": "^5.1.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
-    "eslint-plugin-sort-destructure-keys": "^2.0.0",
-    "eslint-plugin-unused-imports": "^4.1.4",
+    "@biomejs/biome": "1.9.4",
+    "@react-router/dev": "^7.5.0",
+    "@types/node": "^22.14.1",
+    "@types/react": "^19.1.2",
+    "@types/react-dom": "^19.1.2",
+    "@vitejs/plugin-react": "^4.4.0",
     "globals": "^16.0.0",
     "kakao.maps.d.ts": "^0.1.40",
-    "prettier": "^3.5.3",
-    "prettier-plugin-packagejson": "^2.5.10",
-    "typescript": "^5",
-    "typescript-eslint": "^8.24.1",
-    "vite": "^6.2.0",
+    "typescript": "^5.8.3",
+    "vite": "^6.3.0",
     "vite-tsconfig-paths": "^5.1.4"
   },
   "packageManager": "pnpm@10.6.3",
