--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "isbot": "^5.1.26",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-kakao-maps-sdk": "^1.1.27",
     "react-router": "^7.5.0",
     "tailwindcss": "^4.1.4",
